# MakeVideoSnapshot

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  ReadMe.md  cli.c  cli.h  image.c  image.h  main.c  main.h  mvs.h  path.c  path.h  snapshot.c  snapshot.h  std.c  std.h
Build_old/: crc32_sums.txt  sha256_sums.txt
Source/: .gitignore  CMakeLists.txt  image.c  image.h  main.c  snapshot.c  std.h  version.rc
Source/Resources/: MakeVideoSnapshot.rc
Source/ffmpeg/include/: ReadMe.md
Source/script/: clear-all.bat  get-all.bat  get-ffmpeg.bat  get-libjpeg.bat  get-libpng.bat  get-stb.bat  get-zlib.bat
script/: compact-stb.sh  get-stb.bat  get-stb.sh  get-zlib.bat
src/: image.c  snapshot.c
